# dbt-debt

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
dbt_debt/: __init__.py  cli.py  config.py  domain.py  references.py  sqlparse.py
dbt_debt/artifacts/: __init__.py  _json.py  catalog.py  errors.py  graph.py  manifest.py
dbt_debt/consumption/: __init__.py  bigquery.py  cache.py  client.py  columns.py  databricks.py  databricks_queries.py  exclusion.py  jobs.py  redshift.py  redshift_queries.py  snowflake.py  snowflake_queries.py  usage.py
dbt_debt/lineage/: __init__.py  base.py  sqlglot_source.py
dbt_debt/report/: __init__.py  render_json.py  render_text.py  scorecard.py  spinner.py  viewer.py
dbt_debt/verdict/: __init__.py  blockers.py  columns.py  coverage.py  drift.py  exposures.py  freshness.py  models.py  orphans.py  partitioning.py  rarity.py  redshift_hygiene.py  semantic.py  sources.py  staleness.py  tests.py
tests/: conftest.py  fakes.py  test_bigquery_client.py  test_cache.py  test_catalog.py  test_cli.py  test_column_report.py  test_consumption_columns.py  test_consumption_jobs.py  test_consumption_usage.py  test_databricks_client.py  test_databricks_queries.py  test_graph.py  test_lineage_sqlglot.py  test_manifest.py  test_orphan_report.py  test_redshift_client.py  test_redshift_queries.py  test_references.py  test_render.py  test_scorecard.py  test_snowflake_client.py  test_snowflake_queries.py  test_spinner.py  test_sqlparse.py  test_verdict_blockers.py  test_verdict_columns.py  test_verdict_coverage.py  test_verdict_drift.py  test_verdict_exposures.py  test_verdict_freshness.py  test_verdict_models.py  test_verdict_orphans.py  test_verdict_partitioning.py  test_verdict_rarity.py  test_verdict_redshift_hygiene.py  test_verdict_semantic.py  test_verdict_sources.py  test_verdict_staleness.py  test_verdict_tests.py  (+1 more)
tests/fixtures/: catalog.json  manifest.json
